--- a/uni.scss
+++ b/uni.scss
@@ -15,7 +15,7 @@
 //$uni-text-color-disable:#c0c0c0;
 
 /* 背景颜色 */
-//$uni-bg-color:#ffffff;
+$uni-bg-color:#edeff0;
 //$uni-bg-color-grey:#f8f8f8;
 //$uni-bg-color-hover:#f1f1f1;//点击状态颜色
 //$uni-bg-color-mask:rgba(0, 0, 0, 0.4);//遮罩颜色
@@ -61,3 +61,22 @@
 //$uni-font-size-subtitle:36rpx;
 //$uni-color-paragraph: #3F536E; // 文章段落颜色
 //$uni-font-size-paragraph:30rpx;
+
+// 主色
+$color-primary: #409eff;
+
+// 辅助色
+$color-default: #dcdfe6;
+$color-success: #67c23a;
+$color-warning: #e6a23c;
+$color-error: #dd524d;
+$color-info: #909399;
+$color-disabled: #c0c4cc;
+
+// 聚焦色
+$color-focus-default: #eeeeee;
+$color-focus-primary: #3a8ee6;
+$color-focus-success: #5daf34;
+$color-focus-warning: #cf9236;
+$color-focus-error: #dd6161;
+$color-focus-info: #82848a;
